enable antialiasing on SVG user icons